# gemba-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  gemba-cli
Construction-Site--1/: README.dataset.txt
Construction-Site--1/test/labels/: 24_jpeg.rf.683cc3b84910fd9f43de726883b30012.txt  65.rf.18c0eef3223cc9faaa49eb4dfeee7abd.txt  85_jpeg.rf.b5920347bf255b61789a361820b5961a.txt  8_jpeg.rf.b454f94b77ed96f44bf0f0d81fb64398.txt
Construction-Site--1/train/labels/: 102_jpeg.rf.61ee95dcc9ab12a4aab9f32a26cdf48e.txt  104_jpeg.rf.ac37373abf99c4a6d25bd0504f149cb1.txt  16_jpeg.rf.6fa7b161084a08c230585a10d3319fa4.txt  17_jpeg.rf.68ac5650ff88cd511ff36eafeda770e4.txt  18.rf.93ab3ab99a00172d3c2b71a6179b6e63.txt  33.rf.27c5d7d2bd389dd6f22635b6dd38e947.txt  35_jpeg.rf.d4104384830de5f00eb55551ef1e1442.txt  36_jpeg.rf.23136e132e1f491cee89e06ec970b5ac.txt  38_jpeg.rf.15048476bbdf0e95a1d4792b3b445500.txt  43.rf.bc18686895691e5d0d9751585c9617e4.txt  54_jpeg.rf.3aa64cdfafe6fabe9153079b3bf5e541.txt  61.rf.59347a9f13da54d294e3598773fe5fd2.txt  (+8 more)
data/Construction-Site--1/: data.yaml
docker-config/postgres/: init.sql
docs/: system_diagram.md
old/: .gitignore  main.ipynb
old/Construction-Site--1/: README.roboflow.txt
services/cli-app/: Dockerfile  pyproject.toml
services/cli_app/: Dockerfile  pyproject.toml
services/cli_app/src/: main.py
services/object-detection/: Dockerfile  object_detection.code-workspace  pyproject.toml
services/object-detection/src/: main.py
services/object_detection/: Dockerfile  pyproject.toml
src/cv/: cam_conn.py
(+78 files in other folders)
