[tool.poetry]
name = "cli-app"
version = "0.1.0"
description = "A CLI for interacting with the Gemba AI services."
authors = ["zachkaupp@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.7"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
